[package]
name = "jump-game"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
license = "MIT"
description = "https://leetcode.com/problems/jump-game/"
repository = "https://github.com/dgollub/leetcode.com-problems/"
# NOTE(dkg): it'll probably work with older versions as well, but this is what I have right now
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
